Need to start Responcivness

--- a/index.html
+++ b/index.html
@@ -297,24 +297,48 @@
 
 
     <!--********************Contakt Section********************-->
-    <section class="contact">
+    <section id="contact">
         <div class="contact container">
             <div>
                 <h1 class="section-title">
                     K<span>o</span>nt<span>a</span>kt <span>i</span>nf<span>o</span>
                 </h1>
             </div>
+
+            <!--Information Boxes-->
+            <!--For- my email adress-->
             <div class="contact-item">
                 <div class="contact-item">
+
                     <div class="icon">
-                        <!--Place Icon link here-->
-                    </div>
-                    <div class="contact-info">
+                        <img src="https://img.icons8.com/bubbles/50/000000/apple-mail.png" alt="Email Icon"/>
+                        <div class="contact-info">
                         <h1>
                             Email Adresse
                         </h1>
                         <h2>
-                            Du kan kontakte mig på følgene email:
+                            Du kan kontakte mig på følgene email: 
+                            <br> EMAIL
+                        </h2>
+                    </div>
+                </div>
+            </div>
+
+            <!--For my phone number-->
+            <div class="contact-item">
+                <div class="contact-item">
+
+                    <div class="icon">
+                        <img src="https://img.icons8.com/bubbles/50/000000/phone--v1.png" alt="Phone Icon"/>
+                    </div>
+
+                    <div class="contact-info">
+                        <h1>
+                            Telefon Nummer
+                        </h1>
+                        <h2>
+                            Du kan kontakte mig på følgene nummer: 
+                            <br> NUMMER
                         </h2>
                     </div>
                 </div>
@@ -324,5 +348,34 @@
     </section>
 
     <!--********************End of Contakt Section********************-->
+
+
+
+    <!--********************Footer Section********************-->
+    <section id="footer">
+        <div class="footer container">
+
+
+            <div class="brand">
+                <!--GET LOGO IN HERE-->
+            </div>
+            <h2>
+                Din fremtidige Webdesigner
+            </h2>
+
+            <div class="social-icon">
+                <div class="social-item">
+
+                    <!--Linkedin Icon-->
+                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/000000/linkedin-circled--v1.png" alt="Linkedin Icon"/></a>
+                </div>
+
+                <!--Add more icons here whwn found-->
+
+            </div>
+        </div>
+    </section>
+    
+    <!--********************End of Footer Section********************-->
 </body>
 </html>
