--- a/index.html
+++ b/index.html
@@ -5,13 +5,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="styles.css">
 
   <title>Præsentations Portfolie</title>
+
 </head>
 
 <body>
     <!--*************************Navigation Section*************************-->
+    <section id="nav">
+
+        <div class="nav container">
+
+            <div class="nav-bar">
+
+                <!--My brand Logo-->
+                <div class="brand">
+                    <img src="images/logo.png" alt="My Logo">
+                </div>
+
+                <!--Menu list-->
+                <div class="nav-list">
+
+                    <!--Listing-->
+                    <ul>
+                        <li>
+                            <a href="#header">Forside</a>
+                        </li>
+                        <li>
+                            <a href="#skills">Færdigheder</a>
+                        </li>
+                        <li>
+                            <a href="#projects">Projekter</a>
+                        </li>
+                        <li>
+                            <a href="#about">Om Mig</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Kontakt</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <!--*************************End of Navigation Section*************************-->
 
@@ -380,7 +419,7 @@
         <div class="footer container">
 
             <div class="brand">
-                <!--GET LOGO IN HERE-->
+                <img src="images/logo.png" alt="">
             </div>
             <h2>
                 Din fremtidig Webdesigner
@@ -401,5 +440,6 @@
     </section>
 
   <!--*************************End of Footer*************************-->
+
   </body>
 </html>
