--- a/index.html
+++ b/index.html
@@ -89,86 +89,88 @@
                     F<span>æ</span>rd<span>i</span>gh<span>e</span>d<span>e</span>r
                 </h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-                    magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
-                    voluptatum explicabo!
+                    Jeg er bekendt i de fleste Adobe programmer, både i de enkelte programmer 
+                    men også i kollaboration med hinanden. Samtidig med kode står jeg også klar 
+                    med en teoretisk baggrund inde for design teori.
                 </p>
             </div>
 
             <!--Boxes with skill info-->
             <div class="skills-bottom">
 
-                <!--Photoshop-->
+                <!--Grafik Design-->
                 <div class="skills-item">
                     <div class="icon">
-                        <img src="https://img.icons8.com/color/96/000000/adobe-photoshop--v1.png" alt="Photoshop Icon"/>
+                        <img src="https://img.icons8.com/nolan/96/design.png" alt="Design Icon"/>
                     </div>
-                    <h2>Photoshop</h2>
+                    <h2>Grafisk Design</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem 
-                        sed architecto placeat beatae tenetur officia quod
+                        Med erfaring indenfor Logo og Plakat design står jeg klar til at producere 
+                        både store og små projekter, som er tilpasset til dine behov og ønsker.
+ 
                     </p>
                 </div>
 
-                <!--Illustrator-->
+                <!--Prototypes-->
                 <div class="skills-item">
                     <div class="icon">
-                        <img src="https://img.icons8.com/color/96/000000/adobe-illustrator--v1.png" alt="Illustrator Icon"/>
+                        <img src="https://img.icons8.com/nolan/96/prototype.png" alt="Prototype Icon"/>
                     </div>
-                    <h2>Illustrator</h2>
+                    <h2>Prototyper</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
+                        Ved brug af både teknologiske og fysiske midler kan jeg udfolde flere slags prototyper. 
+                        Disse prototyper kan ændres og forbedres efter behov. 
                     </p>
                 </div>
 
-                <!--Indesign-->
+                <!--Konceptdecelopment-->
                 <div class="skills-item">
                     <div class="icon">
-                        <img src="https://img.icons8.com/color/96/000000/adobe-indesign--v1.png" alt="Indesign Icon"/>
+                        <img src="https://img.icons8.com/external-photo3ideastudio-gradient-photo3ideastudio/100/000000/external-concept-graphic-photo3ideastudio-gradient-photo3ideastudio.png" alt="Koncept Icon"/>                    
                     </div>
-                    <h2>Indesign</h2>
+                    <h2>Konceptudvikling</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
+                        Med en teoretisk baggrund og viden kan jeg sætte gang i udviklingen af projekter 
+                        og løsningsforslag. 
                     </p>
                 </div>
 
-                <!--XD-->
+                <!--UI-->
                 <div class="skills-item">
                     <div class="icon">
-                        <img src="https://img.icons8.com/color/96/000000/adobe-xd--v1.png" alt="XD Icon"/>
+                        <img src="https://img.icons8.com/external-kiranshastry-gradient-kiranshastry/100/000000/external-ui-online-learning-kiranshastry-gradient-kiranshastry.png" alt="UI Icon"/>                    
                     </div>
-                    <h2>XD</h2>
+                    <h2>UI</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
+                        Med UI kan jeg kreere den visuelle oplevelse som henvender sig til den ønskede kundebase.
                     </p>
                 </div>
 
-                <!--Premiere Pro-->
+                <!--UX-->
                 <div class="skills-item">
                     <div class="icon">
-                        <img src="https://img.icons8.com/color/96/000000/adobe-premiere-pro--v1.png" alt="Premiere Pro Icon"/>
+                        <img src="https://img.icons8.com/external-xnimrodx-lineal-gradient-xnimrodx/100/000000/external-web-design-art-and-design-xnimrodx-lineal-gradient-xnimrodx.png" alt="UX Icon"/>                    
                     </div>
-                    <h2>XD</h2>
+                    <h2>UX</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
+                        For at alt på hjemmesiden kan bevæge sig og skabe handlinger for brugeren, 
+                        skal der skabes et skelet. Med denne hjemmeside som et eksempel, ses det at jeg kan 
+                        udføre denne opgave.
+
                     </p>
                 </div>
 
-                <!--Animate-->
+                <!--HTML5 & CSS-->
                 <div class="skills-item">
                     <div class="icon">
-                        <img src="https://img.icons8.com/color/96/000000/adobe-animate.png" alt="Animate Icon"/>
+                        <img src="https://img.icons8.com/nolan/96/code.png" alt="Code Icon"/>
                     </div>
-                    <h2>Animate</h2>
+                    <h2>HTML5 & CSS</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
+                        Ved brug af disse kodesprog kan jeg skabe og opbygge hjemmesider som denne. 
+                        Dette gøres med fokus på hjemmesidens skelet, hvorefter design udseendet også kodes.                     
                     </p>
-                </div>
+                </div>               
             </div>
         </div>
 
@@ -307,6 +309,24 @@
                         <img src="images/home.jpg" alt="img">
                     </div>
                 </div>
+
+                <!--------->
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 7</h1>
+                        <h2>Undertitle</h2>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+                            rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
+                            harum? Ipsum repellat animi, fugit architecto voluptatum odit et!
+                        </p>
+                    </div>
+
+                    <!--Project image-->
+                    <div class="project-img">
+                        <img src="images/home.jpg" alt="img">
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -325,7 +345,7 @@
             <!--The Left side of the screen-->
             <div class="col-left">
                 <div class="about-img">
-                    <img src="images/home.jpg" alt="img">
+                    <img src="images/portrait.png" alt="self portrait">
                 </div>
             </div>
 
@@ -358,7 +378,7 @@
         <div class="contact container">
             <div>
                 <h1 class="section-title">
-                    Contact <span>info</span>
+                    K<span>o</span>nt<span>a</span>kt <span>I</span>nf<span>o</span>
                 </h1>
             </div>
 
