Wrote some project text

--- a/index.html
+++ b/index.html
@@ -197,49 +197,57 @@
             <div class="all-projects">
 
 
-                <!--------->
+                <!----Doggr----->
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 1</h1>
-                        <h2>Undertitle</h2>
+                        <h2>En "Dating App" for hunde</h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-                            rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-                            harum? Ipsum repellat animi, fugit architecto voluptatum odit et!
+                            Dette app design er lavet sammen som en gruppe. App'en har fået navnet ‘¨Doggr’, 
+                            og tanken bag er et netværk for hundeejere, som gerne vil finde legekammerater 
+                            til deres hund. Under processen stod jeg hovedsageligt for at sk´kabe profil siden. 
+                            <br> <br>
+                            Prototypen kan testes med fælgene link: 
+                            <a href="https://xd.adobe.com/view/2c53539e-4a81-497a-bc20-203815b91b7a-7900/">Doggr</a>
+
                         </p>
                     </div>
 
                     <!--Project image-->
                     <div class="project-img">
-                        <img src="images/home.jpg" alt="img">
+                        <img src="images/doggr.PNG" alt="Doggr - Hunde dating app design">
                     </div>
                 </div>
 
 
-                <!--------->
+                <!----Mita----->
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 2</h1>
-                        <h2>Undertitle</h2>
+                        <h2>Mad app'en "Mita"</h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-                            rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-                            harum? Ipsum repellat animi, fugit architecto voluptatum odit et!
+                            Dette design er til en betalings app for en fiktiv restaurant. Mita er en 
+                            selvopfundet Italiensk  restaurant, som jeg har designet en app til. Ved at 
+                            undersøge eksisterende apps og browsere til dette formål, er jeg kommet frem 
+                            til at design denne Mock Up. 
+                            <br> <br>
+                            Prototypen kan tests med fælgene link: <a href="https://xd.adobe.com/view/a72dfbc8-1c7b-49b2-983a-d5a2d0a4d528-f27e/">Mita</a> 
+
                         </p>
                     </div>
 
                     <!--Project image-->
                     <div class="project-img">
-                        <img src="images/home.jpg" alt="img">
+                        <img src="images/mita.PNG" alt="Design for fiktiv restaurant - Mita">
                     </div>
                 </div>
 
 
-                <!--------->
+                <!----Redesign af hjemmeside----->
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 3</h1>
-                        <h2>Undertitle</h2>
+                        <h2>Redesign af Karrbækminde Fiskeri- og Bymuseum hjemmeside</h2>
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
                             rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
@@ -249,7 +257,7 @@
 
                     <!--Project image-->
                     <div class="project-img">
-                        <img src="images/home.jpg" alt="img">
+                        <img src="images/redesign.png" alt="Redesign af Karrbækminde Fiskeri- og Bymuseum hjemmeside">
                     </div>
                 </div>
 
