Finished project text

--- a/index.html
+++ b/index.html
@@ -209,7 +209,6 @@
                             <br> <br>
                             Prototypen kan testes med fælgene link: 
                             <a href="https://xd.adobe.com/view/2c53539e-4a81-497a-bc20-203815b91b7a-7900/">Doggr</a>
-
                         </p>
                     </div>
 
@@ -231,8 +230,8 @@
                             undersøge eksisterende apps og browsere til dette formål, er jeg kommet frem 
                             til at design denne Mock Up. 
                             <br> <br>
-                            Prototypen kan tests med fælgene link: <a href="https://xd.adobe.com/view/a72dfbc8-1c7b-49b2-983a-d5a2d0a4d528-f27e/">Mita</a> 
-
+                            Prototypen kan tests med fælgene link: 
+                            <a href="https://xd.adobe.com/view/a72dfbc8-1c7b-49b2-983a-d5a2d0a4d528-f27e/">Mita</a>
                         </p>
                     </div>
 
@@ -249,9 +248,12 @@
                         <h1>Project 3</h1>
                         <h2>Redesign af Karrbækminde Fiskeri- og Bymuseum hjemmeside</h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-                            rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-                            harum? Ipsum repellat animi, fugit architecto voluptatum odit et!
+                            Et gruppeprojekt hvor opgaven var at redesigne en hjemmeside. 
+                            Gennem dette projekt blev der analyseret eksisterende museums sider, 
+                            og vurderet research for at akurart repræsentere museets brand. 
+                            <br> <br>
+                            Prototypen kan testes med følgene link: 
+                            <a href="https://xd.adobe.com/view/ddf29c4b-ddf1-44bd-9e43-4a71594504d9-88a1/">Redesign</a>
                         </p>
                     </div>
 
@@ -262,77 +264,81 @@
                 </div>
 
 
-                <!-------->
+                <!----Fjord&Bælt---->
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 4</h1>
-                        <h2>Undertitle</h2>
+                        <h2>Installation for Fjord&Bælt</h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-                            rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-                            harum? Ipsum repellat animi, fugit architecto voluptatum odit et!
+                            Fremstillingen af en interaktivt implemintering til Fjord og Bælt 
+                            Centeret, blev udviklet som en gruppe. Denne app forsøger at holde 
+                            de besøgende børn engageret i centerets vidensformidling. Med en app 
+                            som også kan skabe brug udenfor centeret, forsøgte min gruppe dette.
+                            <br> <br>
+                            Protorypen kan testes med følgene link: 
+                            <a href="https://xd.adobe.com/view/5f311873-456d-41aa-a9c0-cd0e2b8f3479-0a62/ ">Fjord&Bælt</a>
                         </p>
                     </div>
 
                     <!--Project image-->
                     <div class="project-img">
-                        <img src="images/home.jpg" alt="img">
+                        <img src="images/freja.PNG" alt="Fjord&Bælt app">
                     </div>
                 </div>
 
 
-                <!--------->
+                <!----Denne side----->
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 5</h1>
-                        <h2>Undertitle</h2>
+                        <h2>Min portfolie</h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-                            rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-                            harum? Ipsum repellat animi, fugit architecto voluptatum odit et!
+                            Det er en smule meta, men som eksempler på mit kodning, henviser jeg 
+                            til denne portfolio. Jeg har kodet den fra bunden i HTML5 og CSS. For 
+                            kodningsprocessen gennemgik jeg en grundig analyse af design og brand research.
                         </p>
                     </div>
 
                     <!--Project image-->
                     <div class="project-img">
-                        <img src="images/home.jpg" alt="img">
+                        <img src="images/code.PNG" alt="Responsiv code for Desktop">
                     </div>
                 </div>
 
 
-                <!--------->
+                <!----Self Potrait----->
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 6</h1>
-                        <h2>Undertitle</h2>
+                        <h2>Illustrator Selv portræt</h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-                            rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-                            harum? Ipsum repellat animi, fugit architecto voluptatum odit et!
+                            Ud over design færdigheder viser jeg her kunstnerisk viden. 
+                            Dette selvportræt er skabt ved brug af Illustrator. 
                         </p>
                     </div>
 
                     <!--Project image-->
                     <div class="project-img">
-                        <img src="images/home.jpg" alt="img">
+                        <img src="images/self-portrait.png" alt="Selv portræt lavet i Illustrator">
                     </div>
                 </div>
 
-                <!--------->
+                <!----Zine----->
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 7</h1>
-                        <h2>Undertitle</h2>
+                        <h2>Kunst og novelleantologi</h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-                            rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-                            harum? Ipsum repellat animi, fugit architecto voluptatum odit et!
+                            Jeg har i sidste og foregående år skabt et sortiment af mindre illustrationer. 
+                            Disse illustrationer blev anvendt i en selvstændigt udgivet, og solgt, kunst 
+                            og novelleantologi. Mine illustrationer blev brugt som, små headers over hver 
+                            historie titel.
                         </p>
                     </div>
 
                     <!--Project image-->
                     <div class="project-img">
-                        <img src="images/home.jpg" alt="img">
+                        <img src="images/zine.png" alt="img">
                     </div>
                 </div>
             </div>
