--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <p>
                             Dette app design er lavet sammen som en gruppe. App'en har fået navnet ‘¨Doggr’, 
                             og tanken bag er et netværk for hundeejere, som gerne vil finde legekammerater 
-                            til deres hund. Under processen stod jeg hovedsageligt for at sk´kabe profil siden. 
+                            til deres hund. Under processen stod jeg hovedsageligt for at skabe profil siden. 
                             <br> <br>
                             Prototypen kan testes med fælgene link: 
                             <a href="https://xd.adobe.com/view/2c53539e-4a81-497a-bc20-203815b91b7a-7900/">Doggr</a>
@@ -370,11 +370,25 @@
                 </h1>
                 <h2>Front End Developer</h2>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
-                    repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
-                    exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-                    Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-                    reprehenderit libero enim!
+                    Jeg er en ung kvinde på 22 år som ikke lader sig stoppe af forhindringer i hverdagen. 
+                    Jeg ser muligheder i udfordringer, og lader mig ikke stoppe. Lige nu studerer jeg 
+                    Multimediedesign på UCL Odense. 
+                    <br><br>
+                    Før dette studie læste jeg Datalogi på SDU i to semestre hvor jeg til sidst måtte 
+                    indse at den undervisningsform ikke passede til mig. Til gengæld fik jeg en stor glæde 
+                    ud af at lære kodning, hvilket hjalp mig med at se at jeg skulle blive inde for dette 
+                    arbejdsområde.
+                    <br><br>
+                    Jeg ved at mit tydlige handicap kan virker skræmene, men bare rolig, daglig dagen 
+                    er ændrede men den er der stadig. Jeg er ikke bange for at finde nye arbejdsmåder, og 
+                    jeg er altid klar til at forbedre mig selv.
+                    <br><br>
+                    Jeg sætter stor ære i at opfylde mine pligter så godt som muligt, og til tiden. Jeg arbejder 
+                    bedst når jeg har klare instrukser om hvad min rolle er, og hvilke forventninger der sættes 
+                    til mig. Det sagt, så er jeg ikke bange for at træde ind i en lederrolle hvis der er brug 
+                    for det. Jeg er en person som nyder organisation, så alle mine ting og filer har bestemte 
+                    mapper og navne, hvorefter de høre til.
+
                 </p>
             </div>
         </div>
@@ -412,7 +426,7 @@
                         </h1>
                         <h2>
                             Du kan kan kontakte mig på følgene mail:
-                            <br> EMAIL
+                            <br> cwmo43592@edu.ucl.dk
                         </h2>
                     </div>
 
@@ -463,7 +477,7 @@
                 <div class="social-item">
 
                     <!--Linkedin Icon-->
-                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/000000/linkedin-circled--v1.png" alt="Linkedin Icon"/></a>
+                    <a href="https://www.linkedin.com/in/cathleen-m%C3%B8ller-1456a0231/"><img src="https://img.icons8.com/ios-glyphs/30/000000/linkedin-circled--v1.png" alt="Linkedin Icon"/></a>
                 </div>
 
                 <!--Add more icons here when found-->
