Fixed spelling fails

--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
                         <h2>Mad app'en "Mita"</h2>
                         <p>
                             Dette design er til en betalings app for en fiktiv restaurant. Mita er en 
-                            selvopfundet Italiensk  restaurant, som jeg har designet en app til. Ved at 
+                            selvopfundet Italiensk restaurant, som jeg har designet en app til. Ved at 
                             undersøge eksisterende apps og browsere til dette formål, er jeg kommet frem 
                             til at design denne Mock Up. 
                             <br> <br>
-                            Prototypen kan tests med fælgene link: 
+                            Prototypen kan tests med følgende link: 
                             <a href="https://xd.adobe.com/view/a72dfbc8-1c7b-49b2-983a-d5a2d0a4d528-f27e/">Mita</a>
                         </p>
                     </div>
@@ -250,9 +250,9 @@
                         <p>
                             Et gruppeprojekt hvor opgaven var at redesigne en hjemmeside. 
                             Gennem dette projekt blev der analyseret eksisterende museums sider, 
-                            og vurderet research for at akurart repræsentere museets brand. 
+                            og vurderet research for at akkurat repræsentere museets brand. 
                             <br> <br>
-                            Prototypen kan testes med følgene link: 
+                            Prototypen kan testes med følgende link: 
                             <a href="https://xd.adobe.com/view/ddf29c4b-ddf1-44bd-9e43-4a71594504d9-88a1/">Redesign</a>
                         </p>
                     </div>
@@ -270,12 +270,12 @@
                         <h1>Project 4</h1>
                         <h2>Installation for Fjord&Bælt</h2>
                         <p>
-                            Fremstillingen af en interaktivt implemintering til Fjord og Bælt 
+                            Fremstillingen af en interaktiv implementering til Fjord og Bælt 
                             Centeret, blev udviklet som en gruppe. Denne app forsøger at holde 
                             de besøgende børn engageret i centerets vidensformidling. Med en app 
                             som også kan skabe brug udenfor centeret, forsøgte min gruppe dette.
                             <br> <br>
-                            Protorypen kan testes med følgene link: 
+                            Prototypen kan testes med følgende link: 
                             <a href="https://xd.adobe.com/view/5f311873-456d-41aa-a9c0-cd0e2b8f3479-0a62/ ">Fjord&Bælt</a>
                         </p>
                     </div>
@@ -293,8 +293,8 @@
                         <h1>Project 5</h1>
                         <h2>Min portfolie</h2>
                         <p>
-                            Det er en smule meta, men som eksempler på mit kodning, henviser jeg 
-                            til denne portfolio. Jeg har kodet den fra bunden i HTML5 og CSS. For 
+                            Det er en smule meta, men som eksempler på min kodning, henviser jeg 
+                            til denne portfolie. Jeg har kodet den fra bunden i HTML5 og CSS. For 
                             kodningsprocessen gennemgik jeg en grundig analyse af design og brand research.
                         </p>
                     </div>
@@ -379,15 +379,16 @@
                     ud af at lære kodning, hvilket hjalp mig med at se at jeg skulle blive inde for dette 
                     arbejdsområde.
                     <br><br>
-                    Jeg ved at mit tydlige handicap kan virker skræmene, men bare rolig, daglig dagen 
+                    Jeg ved at mit tydelige handicap kan virker skræmmende, men bare rolig, daglig dagen 
                     er ændrede men den er der stadig. Jeg er ikke bange for at finde nye arbejdsmåder, og 
-                    jeg er altid klar til at forbedre mig selv.
+                    jeg er altid klar til at forbedre mig selv. Og jeg er dedikeret i enhver opgave som jeg får
+                    stillet.
                     <br><br>
                     Jeg sætter stor ære i at opfylde mine pligter så godt som muligt, og til tiden. Jeg arbejder 
                     bedst når jeg har klare instrukser om hvad min rolle er, og hvilke forventninger der sættes 
                     til mig. Det sagt, så er jeg ikke bange for at træde ind i en lederrolle hvis der er brug 
-                    for det. Jeg er en person som nyder organisation, så alle mine ting og filer har bestemte 
-                    mapper og navne, hvorefter de høre til.
+                    for det. Jeg er en person som nyder organiseering, så alle mine ting og filer har bestemte 
+                    mapper og navne, hvorefter de hører til.
 
                 </p>
             </div>
